# fm-tui

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fm/: __main__.py  app.py  config.py  modals.py  operations.py  panels.py  preview.py
tests/: test_operations.py
