[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fm-tui"
version = "0.1.0"
description = "Cross-platform dual-pane terminal file manager (Far Manager style)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["terminal", "file-manager", "tui", "textual", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.50.0",
    "send2trash>=1.8.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=0.50.0",
]

[project.scripts]
fm = "fm.__main__:main"

[project.urls]
Homepage = "https://github.com/aitketemirlan/fm-tui"
Repository = "https://github.com/aitketemirlan/fm-tui"
Issues = "https://github.com/aitketemirlan/fm-tui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
